force-app/main/default/objects/Picklist__c/Picklist__c.object-meta.xml
<CustomObject>
    <description>Picklist is used for Warehouse Picking from inventory Positions</description>
    <label>Picklist</label>
    <nameField>
        <displayFormat>PL-{0000000000}</displayFormat>
        <label>Picklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>