force-app/main/default/objects/Picklist__c/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <label>Assigned To Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alessandra Nieto</fullName>
            </value>
            <value>
                <fullName>Cayla</fullName>
            </value>
            <value>
                <fullName>Colin Brown</fullName>
            </value>
            <value>
                <fullName>James</fullName>
            </value>
            <value>
                <fullName>JJ</fullName>
            </value>
            <value>
                <fullName>Khanh</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>Manh</fullName>
            </value>
            <value>
                <fullName>Matt</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Phong</fullName>
            </value>
            <value>
                <fullName>Scott</fullName>
            </value>
            <value>
                <fullName>Tracey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>