force-app/main/default/objects/Picklist__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <formula>(Sales_Order__r.Brand_Quote__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Quote</label>
    <type>Text</type>
</CustomField>