force-app/main/default/objects/Picklist__c/fields/Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Delivery_City__c</fullName>
    <formula>TEXT(Sales_Order__r.Receiver_License__r.License_City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery City</label>
    <type>Text</type>
</CustomField>