force-app/main/default/objects/Picklist__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <formula>Sales_Order__r.Driver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver</label>
    <type>Text</type>
</CustomField>