force-app/main/default/objects/Picklist__c/fields/Is_Pick_Started__c.field-meta.xml
<CustomField>
    <fullName>Is_Pick_Started__c</fullName>
    <formula>NOT(ISBLANK( Pick_Start__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pick Started</label>
    <type>Checkbox</type>
</CustomField>