force-app/main/default/objects/Picklist__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>HYPERLINK( Sales_Order__r.Opportunity_Name__r.Id ,  Sales_Order__r.Opportunity_Name__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>