force-app/main/default/objects/Picklist__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>Sales_Order__r.Ownership__r.Name</formula>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>