force-app/main/default/objects/Picklist__c/fields/Pick_Confirm_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_Confirm_Date__c</fullName>
    <label>Pick Confirm Date</label>
    <type>Date</type>
</CustomField>