force-app/main/default/objects/Picklist__c/fields/Pick_End__c.field-meta.xml
<CustomField>
    <fullName>Pick_End__c</fullName>
    <label>Pick End</label>
    <type>DateTime</type>
</CustomField>