force-app/main/default/objects/Picklist__c/fields/Pick_Hold__c.field-meta.xml
<CustomField>
    <fullName>Pick_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if Pick Hold</inlineHelpText>
    <label>Pick Hold</label>
    <type>Checkbox</type>
</CustomField>