force-app/main/default/objects/Picklist__c/fields/Pick_Start__c.field-meta.xml
<CustomField>
    <fullName>Pick_Start__c</fullName>
    <label>Pick Start</label>
    <type>DateTime</type>
</CustomField>