force-app/main/default/objects/Picklist__c/fields/Picklist_Lines__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Lines__c</fullName>
    <label>Picklist Lines</label>
    <summaryForeignKey>Picklist_Line__c.Picklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>