force-app/main/default/objects/Picklist__c/fields/Planned_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Ship_Date__c</fullName>
    <formula>Sales_Order__r.Planned_Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Ship Date</label>
    <type>Date</type>
</CustomField>