force-app/main/default/objects/Picklist__c/fields/QA_Count__c.field-meta.xml
<CustomField>
    <fullName>QA_Count__c</fullName>
    <label>QA Count</label>
    <summarizedField>Picklist_Line__c.QA_Count__c</summarizedField>
    <summaryForeignKey>Picklist_Line__c.Picklist__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>