force-app/main/default/objects/Picklist__c/fields/QA_Hold__c.field-meta.xml
<CustomField>
    <fullName>QA_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automated QA Hold when any picklist line results from QA Failure.</inlineHelpText>
    <label>QA Hold</label>
    <type>Checkbox</type>
</CustomField>