force-app/main/default/objects/Picklist__c/fields/QA_Status__c.field-meta.xml
<CustomField>
    <fullName>QA_Status__c</fullName>
    <formula>IF(QA_Count__c = Picklist_Lines__c, &quot;Complete&quot;,&quot;Pending&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA Status</label>
    <type>Text</type>
</CustomField>