force-app/main/default/objects/Picklist__c/fields/Receiver_DBA__c.field-meta.xml
<CustomField>
    <fullName>Receiver_DBA__c</fullName>
    <formula>Sales_Order__r.Receiver_DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receiver DBA</label>
    <type>Text</type>
</CustomField>