force-app/main/default/objects/Picklist__c/fields/Scheduled_Pick_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Pick_Date__c</fullName>
    <formula>CASE(
MOD(Sales_Order__r.Planned_Ship_Date__c - DATE(1900, 1, 7), 7),
0, Sales_Order__r.Planned_Ship_Date__c -2,
1, Sales_Order__r.Planned_Ship_Date__c -3,
2, Sales_Order__r.Planned_Ship_Date__c -1,
3, Sales_Order__r.Planned_Ship_Date__c -1,
4, Sales_Order__r.Planned_Ship_Date__c -1,
5, Sales_Order__r.Planned_Ship_Date__c -1,
6, Sales_Order__r.Planned_Ship_Date__c -1, Sales_Order__r.Planned_Ship_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Pick Date</label>
    <type>Date</type>
</CustomField>