force-app/main/default/objects/Picklist__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Picklists</relationshipLabel>
    <relationshipName>Picklists</relationshipName>
    <type>Lookup</type>
</CustomField>