force-app/main/default/objects/Picklist__c/fields/Total_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Item__c</fullName>
    <label>Total Line Item</label>
    <summaryForeignKey>Picklist_Line__c.Picklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>