force-app/main/default/objects/Picklist__c/fields/Track_Trace_Sync__c.field-meta.xml
<CustomField>
    <fullName>Track_Trace_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track &amp; Trace Sync</label>
    <type>Checkbox</type>
</CustomField>