force-app/main/default/objects/Picklist__c/fields/Window_Start_End__c.field-meta.xml
<CustomField>
    <fullName>Window_Start_End__c</fullName>
    <formula>Sales_Order__r.Window_Start_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Window Start &amp; End</label>
    <type>Text</type>
</CustomField>