force-app/main/default/objects/Picklist__c/listViews/X1_Pick_Pending.listView-meta.xml
<ListView>
    <fullName>X1_Pick_Pending</fullName>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <columns>Driver__c</columns>
    <columns>Window_Start_End__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Pick_Hold__c</columns>
    <columns>Scheduled_Pick_Date__c</columns>
    <columns>Ownership__c</columns>
    <columns>Planned_Ship_Date__c</columns>
    <columns>Receiver_DBA__c</columns>
    <columns>Picklist_Lines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>1. Pick Pending</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Filigreen</group>
    </sharedTo>
</ListView>