force-app/main/default/objects/Picklist__c/listViews/X2_QA_Pending.listView-meta.xml
<ListView>
    <fullName>X2_QA_Pending</fullName>
    <columns>Site__c</columns>
    <columns>Driver__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Ownership__c</columns>
    <columns>Planned_Ship_Date__c</columns>
    <columns>Receiver_DBA__c</columns>
    <columns>Picklist_Lines__c</columns>
    <columns>QA_Status__c</columns>
    <columns>QA_Hold__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>QA Review</value>
    </filters>
    <label>2. QA Pending</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Filigreen</group>
    </sharedTo>
</ListView>